force-app/main/default/objects/Booking_Room_Line__c/Booking_Room_Line__c.object-meta.xml
<CustomObject>
    <label>Booking Room Line</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000000000}</displayFormat>
        <label>Booking Room Line	 Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Room Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>