force-app/main/default/objects/Booking_Room_Line__c/fields/Booking_FK__c.field-meta.xml
<CustomField>
    <fullName>Booking_FK__c</fullName>
    <label>Booking_FK</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Option</relationshipLabel>
    <relationshipName>Bookings_Room_Line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>