force-app/main/default/objects/Booking_Room_Line__c/fields/Booking_Room_Line_Parent__c.field-meta.xml
<CustomField>
    <fullName>Booking_Room_Line_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link between an option in a Booking Room line and a room type in a booking room line</description>
    <label>Booking Room Line Parent</label>
    <referenceTo>Booking_Room_Line__c</referenceTo>
    <relationshipLabel>Bookings Room Line</relationshipLabel>
    <relationshipName>Bookings_Room_Line</relationshipName>
    <type>Lookup</type>
</CustomField>