force-app/main/default/objects/Booking_Room_Line__c/fields/BookingRoomLineID__c.field-meta.xml
<CustomField>
    <fullName>BookingRoomLineID__c</fullName>
    <label>BookingRoomLineID</label>
    <type>TextArea</type>
</CustomField>