force-app/main/default/objects/Booking_Room_Line__c/fields/BookingSource__c.field-meta.xml
<CustomField>
    <fullName>BookingSource__c</fullName>
    <label>BookingSource</label>
    <type>TextArea</type>
</CustomField>