force-app/main/default/objects/Booking_Room_Line__c/fields/BuinessLead__c.field-meta.xml
<CustomField>
    <fullName>BuinessLead__c</fullName>
    <label>BuinessLead</label>
    <type>TextArea</type>
</CustomField>