force-app/main/default/objects/Booking_Room_Line__c/fields/ChannelCategory__c.field-meta.xml
<CustomField>
    <fullName>ChannelCategory__c</fullName>
    <label>ChannelCategory</label>
    <type>TextArea</type>
</CustomField>