force-app/main/default/objects/Booking_Room_Line__c/fields/CheckInDate__c.field-meta.xml
<CustomField>
    <fullName>CheckInDate__c</fullName>
    <label>CheckInDate</label>
    <type>DateTime</type>
</CustomField>