force-app/main/default/objects/Booking_Room_Line__c/fields/Children_ages__c.field-meta.xml
<CustomField>
    <fullName>Children_ages__c</fullName>
    <label>Children ages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>