force-app/main/default/objects/Booking_Room_Line__c/fields/Count_Promotion_Night__c.field-meta.xml
<CustomField>
    <fullName>Count_Promotion_Night__c</fullName>
    <label>Count Promotion Night</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>