force-app/main/default/objects/Booking_Room_Line__c/fields/DistributionMode__c.field-meta.xml
<CustomField>
    <fullName>DistributionMode__c</fullName>
    <label>DistributionMode</label>
    <type>TextArea</type>
</CustomField>