force-app/main/default/objects/Booking_Room_Line__c/fields/Hotel_Room_Code_Option__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Room_Code_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link between Booking Room line and Hotel Room Code &amp; option</description>
    <label>Hotel Room Code &amp; Option</label>
    <referenceTo>Hotel_Room_Option__c</referenceTo>
    <relationshipLabel>Bookings Room Line</relationshipLabel>
    <relationshipName>Bookings_Room_Line</relationshipName>
    <type>Lookup</type>
</CustomField>