force-app/main/default/objects/Booking_Room_Line__c/fields/Is_Rate_Included__c.field-meta.xml
<CustomField>
    <fullName>Is_Rate_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rate Included</label>
    <type>Checkbox</type>
</CustomField>