force-app/main/default/objects/Booking_Room_Line__c/fields/Number_of_adults__c.field-meta.xml
<CustomField>
    <fullName>Number_of_adults__c</fullName>
    <label>Number of adults</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>