force-app/main/default/objects/Booking_Room_Line__c/fields/Obsolete__c.field-meta.xml
<CustomField>
    <fullName>Obsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obsolete</label>
    <type>Checkbox</type>
</CustomField>