force-app/main/default/objects/Booking_Room_Line__c/fields/PMS_Article_Code__c.field-meta.xml
<CustomField>
    <fullName>PMS_Article_Code__c</fullName>
    <label>PMS Article Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>