force-app/main/default/objects/Booking_Room_Line__c/fields/Price_Euros__c.field-meta.xml
<CustomField>
    <fullName>Price_Euros__c</fullName>
    <label>Price €</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>