force-app/main/default/objects/Booking_Room_Line__c/fields/Promotion_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Code__c</fullName>
    <label>Promotion Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>