force-app/main/default/objects/Booking_Room_Line__c/fields/Room_Code_Dictionnary_FK__c.field-meta.xml
<CustomField>
    <fullName>Room_Code_Dictionnary_FK__c</fullName>
    <description>External key 
Between Booking room line and Hotel Room code &amp; option</description>
    <externalId>true</externalId>
    <label>Room Code Dictionnary FK</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>