force-app/main/default/objects/Booking_Room_Line__c/fields/Stay_Price__c.field-meta.xml
<CustomField>
    <fullName>Stay_Price__c</fullName>
    <label>Stay Price</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>