force-app/main/default/objects/Booking_Room_Line__c/fields/Tech_Booking_Breakfasts__c.field-meta.xml
<CustomField>
    <fullName>Tech_Booking_Breakfasts__c</fullName>
    <formula>Booking_FK__r.Breakfasts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Booking # Breakfasts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>