force-app/main/default/objects/Booking_Room_Line__c/fields/TechBookingChambre__c.field-meta.xml
<CustomField>
    <fullName>TechBookingChambre__c</fullName>
    <formula>Booking_FK__r.Chambre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Booking # Chambre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>