force-app/main/default/objects/Booking_Room_Line__c/fields/ToDelete__c.field-meta.xml
<CustomField>
    <fullName>ToDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ToDelete</label>
    <type>Checkbox</type>
</CustomField>