force-app/main/default/objects/Booking_Room_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Booking_FK__c</columns>
    <columns>NAME</columns>
    <columns>Room_code__c</columns>
    <columns>Stay_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>